adding all favorite endpoints
